--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>helloworld</module>
+        <module>demo-provider</module>
+        <module>demo-consumer</module>
+        <module>demo-interface</module>
     </modules>
 
     <properties>
