--- a/demo-consumer/pom.xml
+++ b/demo-consumer/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>dubbo-learn</artifactId>
-        <groupId>com.ddcx</groupId>
+        <groupId>com.lzumetal</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.ddcx</groupId>
+            <groupId>com.lzumetal</groupId>
             <artifactId>demo-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
